# broadify-bridge

./: .gitignore  AGENTS.md  CLAUDE.md  CLAUDE.orchestration.md  KEYING-AGENT.md  LICENSE  NOTICES.md  README.md  electron-builder.config.cjs  electron-builder.json  eslint.config.js  index.html  jest.config.cjs  jest.setup.cjs  package-lock.json  package.json  tsconfig.app.json  tsconfig.test.json  types.d.ts  types.d.ts.map  types.ts
.claude/: settings.json
.claude/commands/: task-finish.md  task-merge.md  task-start.md  task.md
.claude/hooks/: git-guardrails.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-presentation-runtime-macos-asset.yml  build-sdl2-macos-asset.yml  meeting-helper-preflight.yml  release.yml  test-release.yml
apps/bridge/: package-lock.json  package.json  tsconfig-graphics-renderer.json  tsconfig.json
apps/bridge/native/meeting-helper/: CMakeLists.txt  README.md  build.ps1  build.sh
apps/bridge/native/meeting-helper/Shared/include/: framebus_writer.h
apps/bridge/native/meeting-helper/Shared/src/: framebus_writer.c
apps/bridge/native/meeting-helper/macos/: BroadifyMeetingHelper.modnet.entitlements  Info.plist
apps/bridge/native/meeting-helper/models/: DEPLOY.md  coreml-manifest.json  manifest.json
apps/bridge/native/meeting-helper/models/MODNet.mlpackage/: Manifest.json
apps/bridge/native/meeting-helper/models/MODNet.mlpackage/Data/com.apple.CoreML/: model.mlmodel
apps/bridge/native/meeting-helper/src/: main.cpp
apps/bridge/native/meeting-helper/src/capture/: camera_avfoundation.mm  camera_mediafoundation.cpp  camera_source.cpp  camera_source.h  camera_stub.cpp
apps/bridge/native/meeting-helper/src/common/: options.cpp  options.h
apps/bridge/native/meeting-helper/src/compose/: compositor.cpp  compositor.h  d3d11_compositor.cpp  d3d11_compositor.h  gpu_compositor_types.h  gpu_compositor_uniforms.h  metal_compositor.h  metal_compositor.mm  metal_device.h  metal_device.mm
apps/bridge/native/meeting-helper/src/control/: control_server.cpp  control_server.h
apps/bridge/native/meeting-helper/src/director/: auto_director.h
apps/bridge/native/meeting-helper/src/keyer/: coreml_keyer.h  coreml_keyer.mm  gpu_mask_refine.h  gpu_mask_refine.mm  keyer.h  keyer_chain.cpp  keyer_chain.h  model_manifest.cpp  model_manifest.h  modnet_keyer.cpp  modnet_keyer.h  passthrough_keyer.cpp  vision_keyer.h  vision_keyer.mm
apps/bridge/native/meeting-helper/src/macos/: macos_app.h  macos_app.mm
apps/bridge/native/meeting-helper/src/output/: vcam_controller.cpp  vcam_controller.h
apps/bridge/native/meeting-helper/src/pipeline/: frame_pipeline.cpp  frame_pipeline.h  guided_mask_refine.cpp  guided_mask_refine.h
apps/bridge/native/meeting-helper/src/preview/: mjpeg_server.cpp  mjpeg_server.h  preview_frame_store.cpp  preview_frame_store.h  raw_frame_server.cpp  raw_frame_server.h
apps/bridge/native/meeting-helper/src/recorder/: meeting_recorder.h  meeting_recorder.mm  meeting_recorder_mediafoundation.cpp  meeting_recorder_stub.cpp
apps/bridge/native/meeting-helper/src/state/: meeting_state.h
apps/bridge/native/meeting-helper/src/util/: json_utils.cpp  json_utils.h  sha256.cpp  sha256.h
apps/bridge/native/meeting-helper/tests/: guided_mask_refine_test.cpp
apps/bridge/native/vcam-helper/windows/: CMakeLists.txt  README.md  deploy-vcam.ps1  dllmain.cpp  media_source.cpp  media_source.h  media_stream.cpp  media_stream.h  mf_attributes.h  raw_frame_client.cpp  raw_frame_client.h  vcam_guid.h  vcam_log.cpp  vcam_log.h
config/: bridge.env  default.json  network-config.json
docs/: ARCHITECTURE.md  ATEM_TRICASTER_REQUIREMENTS.md  BRIDGE.md  BRIDGE_ARCHITECTURE.md  BRIDGE_IDLE_MODE.md  CODE_STRUCTURE.md  CONFIG_MANAGEMENT.md  DOC-PREP-TODO.md  ENGINE_AUTO_CONNECT.md  IPC_COMMUNICATION.md  LOGGING.md  MACRO_API_RESPONSES.md  MAIN_PROCESS.md  OUTPUT_CHECK_LOGIC.md  OUTPUT_ENDPOINTS.md  PRODUCTION_FIXES.md  README.md  RELAY_COMPATIBILITY_CHECK.md  RELAY_SETUP_CHECKLIST.md  RELEASES.md  RELEASE_PROCESS.md  RENDERER.md  SERVICES.md  SHORT_RELEASE_PROCESS.md  TESTING_DEVICE_DETECTION.md  TRICASTER_ADAPTER.md  TUNNEL_ARCHITECTURE.md  VMIX_ADAPTER.md  WEB_APP_INTEGRATION.md  WEB_APP_RELAY_INTEGRATION.md  build-process.md  compliance-checklist.md  ffmpeg-minimal-build.md  ffmpeg-setup.md  graphics-dev-mode-plan.md  graphics-queueing.md  graphics-renderer-findings.md  license-analysis.md  license-summary.md  macos-13-graphics-hardening.md  (+1 more)
docs/DEBUG/: bugs-detected.md  logs-1.txt  logs-2.txt  logs-3.txt  logs-4.txt
docs/bridge/: README.md  TODO.md  USERDATA_ON_REINSTALL.md  architecture-overview.md  dataflows.md  production-crash-analysis-2026-02-13.md  vision-person-segmentation-tuning-plan.md
docs/debug/: graphics-code-audit.md  graphics-log-reference.md  graphics-umsetzungsplan.md  new.md  (+1 more)
scripts/: build-decklink-helper.sh  build-display-helper.sh  build-framebus.sh  build-meeting-helper.sh  build-vcam-helper-macos.sh  build-vcam-helper.sh  check-decklink-helper.sh  check-ffmpeg.js  clean-build-artifacts.mjs  collect-windows-display-helper-diagnostics.ps1  download-cloudflared.js  download-decklink-helper.sh  download-ffmpeg.js  download-modnet-model.sh  download-presentation-runtime-macos.sh  download-sdl2-macos.sh  ensure-presentation-runtime-macos.sh  ensure-sdl2-macos.sh  ensure-windows-updater-metadata.mjs  gen-relay-caller-keys.sh  hash-meeting-model.sh  install-vcam-helper-macos.sh  meeting-helper-release-contract.test.cjs  prepare-decklink-helper-release.sh  prepare-decklink-helper.sh  prepare-modnet-coreml-model.sh  prepare-modnet-model-release.sh  prepare-presentation-runtime-macos-release.sh  prepare-presentation-runtime-macos.sh  prepare-sdl2-macos-release.sh  prepare-windows-meeting-helper-deps.ps1  push-release.mjs  register-windows-azure-signing-serialization.cjs  resolve-windows-install-directory-name.cjs  sign-display-helper.sh  sign-presentation-runtime-macos.sh  sign-windows-native-resources.cjs  smoke-test-windows-msi.ps1  smoke-test-windows-nsis.ps1  test-meeting-helper-gpu.cjs  (+10 more)
templates/: TASK.md
(+585 files in other folders)
